fix bug 88050. remove Korean base transformation. r=jshin sr=waterson